# django-authorization

./: .gitignore  README.md  manage.py  pyproject.toml
apps/authorization/: manager.py  models.py  serializers.py  urls.py  views.py
apps/authorization/services/: manager_servises.py  validating.py
commons/: constants.py
settings/: settings.py  wsgi.py
